pulling new data

--- a/bryant/scratch_exploration.ipynb
+++ b/bryant/scratch_exploration.ipynb
@@ -632,8 +632,382 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9d9a8ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_df = pd.read_csv('timestamped_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae783b08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1692 entries, 0 to 1691\n",
+      "Data columns (total 231 columns):\n",
+      " #    Column                                 Dtype  \n",
+      "---   ------                                 -----  \n",
+      " 0    Unnamed: 0                             int64  \n",
+      " 1    airdragon_team100                      float64\n",
+      " 2    assistsplayer_1                        float64\n",
+      " 3    assistsplayer_10                       float64\n",
+      " 4    assistsplayer_2                        float64\n",
+      " 5    assistsplayer_3                        float64\n",
+      " 6    assistsplayer_4                        float64\n",
+      " 7    assistsplayer_5                        float64\n",
+      " 8    assistsplayer_6                        float64\n",
+      " 9    assistsplayer_7                        float64\n",
+      " 10   assistsplayer_8                        float64\n",
+      " 11   assistsplayer_9                        float64\n",
+      " 12   baron_team100                          float64\n",
+      " 13   chemtechdragon_team100                 float64\n",
+      " 14   currentGold_1                          float64\n",
+      " 15   currentGold_10                         float64\n",
+      " 16   currentGold_2                          float64\n",
+      " 17   currentGold_3                          float64\n",
+      " 18   currentGold_4                          float64\n",
+      " 19   currentGold_5                          float64\n",
+      " 20   currentGold_6                          float64\n",
+      " 21   currentGold_7                          float64\n",
+      " 22   currentGold_8                          float64\n",
+      " 23   currentGold_9                          float64\n",
+      " 24   deathsplayer_1                         float64\n",
+      " 25   deathsplayer_10                        float64\n",
+      " 26   deathsplayer_2                         float64\n",
+      " 27   deathsplayer_3                         float64\n",
+      " 28   deathsplayer_4                         float64\n",
+      " 29   deathsplayer_5                         float64\n",
+      " 30   deathsplayer_6                         float64\n",
+      " 31   deathsplayer_7                         float64\n",
+      " 32   deathsplayer_8                         float64\n",
+      " 33   deathsplayer_9                         float64\n",
+      " 34   dragon_team100                         float64\n",
+      " 35   dragon_team200                         float64\n",
+      " 36   earthdragon_team100                    float64\n",
+      " 37   earthdragon_team200                    float64\n",
+      " 38   firedragon_team100                     float64\n",
+      " 39   firedragon_team200                     float64\n",
+      " 40   gameDuration                           int64  \n",
+      " 41   gameEndTimestamp                       int64  \n",
+      " 42   gameId                                 int64  \n",
+      " 43   gameMode                               object \n",
+      " 44   gameName                               object \n",
+      " 45   gameStartTimestamp                     int64  \n",
+      " 46   gameType                               object \n",
+      " 47   gameVersion                            object \n",
+      " 48   goldPerSecond_1                        float64\n",
+      " 49   goldPerSecond_10                       float64\n",
+      " 50   goldPerSecond_2                        float64\n",
+      " 51   goldPerSecond_3                        float64\n",
+      " 52   goldPerSecond_4                        float64\n",
+      " 53   goldPerSecond_5                        float64\n",
+      " 54   goldPerSecond_6                        float64\n",
+      " 55   goldPerSecond_7                        float64\n",
+      " 56   goldPerSecond_8                        float64\n",
+      " 57   goldPerSecond_9                        float64\n",
+      " 58   hextechdragon_team200                  float64\n",
+      " 59   inhibs_lost_team200                    float64\n",
+      " 60   jungleMinionsKilled_1                  float64\n",
+      " 61   jungleMinionsKilled_10                 float64\n",
+      " 62   jungleMinionsKilled_2                  float64\n",
+      " 63   jungleMinionsKilled_3                  float64\n",
+      " 64   jungleMinionsKilled_4                  float64\n",
+      " 65   jungleMinionsKilled_5                  float64\n",
+      " 66   jungleMinionsKilled_6                  float64\n",
+      " 67   jungleMinionsKilled_7                  float64\n",
+      " 68   jungleMinionsKilled_8                  float64\n",
+      " 69   jungleMinionsKilled_9                  float64\n",
+      " 70   killsplayer_1                          float64\n",
+      " 71   killsplayer_10                         float64\n",
+      " 72   killsplayer_2                          float64\n",
+      " 73   killsplayer_3                          float64\n",
+      " 74   killsplayer_4                          float64\n",
+      " 75   killsplayer_5                          float64\n",
+      " 76   killsplayer_6                          float64\n",
+      " 77   killsplayer_7                          float64\n",
+      " 78   killsplayer_8                          float64\n",
+      " 79   killsplayer_9                          float64\n",
+      " 80   level_1                                float64\n",
+      " 81   level_10                               float64\n",
+      " 82   level_2                                float64\n",
+      " 83   level_3                                float64\n",
+      " 84   level_4                                float64\n",
+      " 85   level_5                                float64\n",
+      " 86   level_6                                float64\n",
+      " 87   level_7                                float64\n",
+      " 88   level_8                                float64\n",
+      " 89   level_9                                float64\n",
+      " 90   magicDamageDoneToChampions_1           float64\n",
+      " 91   magicDamageDoneToChampions_10          float64\n",
+      " 92   magicDamageDoneToChampions_2           float64\n",
+      " 93   magicDamageDoneToChampions_3           float64\n",
+      " 94   magicDamageDoneToChampions_4           float64\n",
+      " 95   magicDamageDoneToChampions_5           float64\n",
+      " 96   magicDamageDoneToChampions_6           float64\n",
+      " 97   magicDamageDoneToChampions_7           float64\n",
+      " 98   magicDamageDoneToChampions_8           float64\n",
+      " 99   magicDamageDoneToChampions_9           float64\n",
+      " 100  matchId                                object \n",
+      " 101  minionsKilled_1                        float64\n",
+      " 102  minionsKilled_10                       float64\n",
+      " 103  minionsKilled_2                        float64\n",
+      " 104  minionsKilled_3                        float64\n",
+      " 105  minionsKilled_4                        float64\n",
+      " 106  minionsKilled_5                        float64\n",
+      " 107  minionsKilled_6                        float64\n",
+      " 108  minionsKilled_7                        float64\n",
+      " 109  minionsKilled_8                        float64\n",
+      " 110  minionsKilled_9                        float64\n",
+      " 111  physicalDamageDoneToChampions_1        float64\n",
+      " 112  physicalDamageDoneToChampions_10       float64\n",
+      " 113  physicalDamageDoneToChampions_2        float64\n",
+      " 114  physicalDamageDoneToChampions_3        float64\n",
+      " 115  physicalDamageDoneToChampions_4        float64\n",
+      " 116  physicalDamageDoneToChampions_5        float64\n",
+      " 117  physicalDamageDoneToChampions_6        float64\n",
+      " 118  physicalDamageDoneToChampions_7        float64\n",
+      " 119  physicalDamageDoneToChampions_8        float64\n",
+      " 120  physicalDamageDoneToChampions_9        float64\n",
+      " 121  queueId                                int64  \n",
+      " 122  riftherald_team100                     float64\n",
+      " 123  riftherald_team300                     float64\n",
+      " 124  timeEnemySpentControlled_1             float64\n",
+      " 125  timeEnemySpentControlled_10            float64\n",
+      " 126  timeEnemySpentControlled_2             float64\n",
+      " 127  timeEnemySpentControlled_3             float64\n",
+      " 128  timeEnemySpentControlled_4             float64\n",
+      " 129  timeEnemySpentControlled_5             float64\n",
+      " 130  timeEnemySpentControlled_6             float64\n",
+      " 131  timeEnemySpentControlled_7             float64\n",
+      " 132  timeEnemySpentControlled_8             float64\n",
+      " 133  timeEnemySpentControlled_9             float64\n",
+      " 134  time_cutoff                            float64\n",
+      " 135  timestamp                              float64\n",
+      " 136  totalDamageDoneToChampions_1           float64\n",
+      " 137  totalDamageDoneToChampions_10          float64\n",
+      " 138  totalDamageDoneToChampions_2           float64\n",
+      " 139  totalDamageDoneToChampions_3           float64\n",
+      " 140  totalDamageDoneToChampions_4           float64\n",
+      " 141  totalDamageDoneToChampions_5           float64\n",
+      " 142  totalDamageDoneToChampions_6           float64\n",
+      " 143  totalDamageDoneToChampions_7           float64\n",
+      " 144  totalDamageDoneToChampions_8           float64\n",
+      " 145  totalDamageDoneToChampions_9           float64\n",
+      " 146  totalGold_1                            float64\n",
+      " 147  totalGold_10                           float64\n",
+      " 148  totalGold_2                            float64\n",
+      " 149  totalGold_3                            float64\n",
+      " 150  totalGold_4                            float64\n",
+      " 151  totalGold_5                            float64\n",
+      " 152  totalGold_6                            float64\n",
+      " 153  totalGold_7                            float64\n",
+      " 154  totalGold_8                            float64\n",
+      " 155  totalGold_9                            float64\n",
+      " 156  towers_lost_team100                    float64\n",
+      " 157  towers_lost_team200                    float64\n",
+      " 158  trueDamageDoneToChampions_1            float64\n",
+      " 159  trueDamageDoneToChampions_10           float64\n",
+      " 160  trueDamageDoneToChampions_2            float64\n",
+      " 161  trueDamageDoneToChampions_3            float64\n",
+      " 162  trueDamageDoneToChampions_4            float64\n",
+      " 163  trueDamageDoneToChampions_5            float64\n",
+      " 164  trueDamageDoneToChampions_6            float64\n",
+      " 165  trueDamageDoneToChampions_7            float64\n",
+      " 166  trueDamageDoneToChampions_8            float64\n",
+      " 167  trueDamageDoneToChampions_9            float64\n",
+      " 168  ward_player_0                          float64\n",
+      " 169  ward_player_1                          float64\n",
+      " 170  ward_player_10                         float64\n",
+      " 171  ward_player_2                          float64\n",
+      " 172  ward_player_3                          float64\n",
+      " 173  ward_player_4                          float64\n",
+      " 174  ward_player_5                          float64\n",
+      " 175  ward_player_6                          float64\n",
+      " 176  ward_player_7                          float64\n",
+      " 177  ward_player_8                          float64\n",
+      " 178  ward_player_9                          float64\n",
+      " 179  waterdragon_team100                    float64\n",
+      " 180  winningTeam                            float64\n",
+      " 181  xp_1                                   float64\n",
+      " 182  xp_10                                  float64\n",
+      " 183  xp_2                                   float64\n",
+      " 184  xp_3                                   float64\n",
+      " 185  xp_4                                   float64\n",
+      " 186  xp_5                                   float64\n",
+      " 187  xp_6                                   float64\n",
+      " 188  xp_7                                   float64\n",
+      " 189  xp_8                                   float64\n",
+      " 190  xp_9                                   float64\n",
+      " 191  waterdragon_team200                    float64\n",
+      " 192  hextechdragon_team100                  float64\n",
+      " 193  riftherald_team200                     float64\n",
+      " 194  airdragon_team200                      float64\n",
+      " 195  chemtechdragon_team200                 float64\n",
+      " 196  inhibs_lost_team100                    float64\n",
+      " 197  BlueTeamDeaths                         int64  \n",
+      " 198  RedTeamDeaths                          int64  \n",
+      " 199  BlueTeamGoldPerSec                     int64  \n",
+      " 200  RedTeamGoldPerSec                      int64  \n",
+      " 201  BlueTeamJungleMinionsKilled            int64  \n",
+      " 202  RedTeamJungleMinionsKilled             int64  \n",
+      " 203  BlueTeamKills                          int64  \n",
+      " 204  RedTeamKills                           int64  \n",
+      " 205  BlueTeamLevel                          int64  \n",
+      " 206  RedTeamLevel                           int64  \n",
+      " 207  BlueTeamMagicDamageDoneToChampions     int64  \n",
+      " 208  RedTeamMagicDamageDoneToChampions      int64  \n",
+      " 209  BlueTeamMinionsKilled                  int64  \n",
+      " 210  RedTeamMinionsKilled                   int64  \n",
+      " 211  BlueTeamPhysicalDamageDoneToChampions  int64  \n",
+      " 212  RedTeamPhysicalDamageDoneToChampions   int64  \n",
+      " 213  BlueTeamTimeEnemySpentControlled       int64  \n",
+      " 214  RedTeamTimeEnemySpentControlled        int64  \n",
+      " 215  BlueTeamTotalDamageDoneToChampions     int64  \n",
+      " 216  RedTeamTotalDamageDoneToChampions      int64  \n",
+      " 217  BlueTeamTotalGold                      int64  \n",
+      " 218  RedTeamTotalGold                       int64  \n",
+      " 219  BlueTeamTrueDamageDoneToChampions      int64  \n",
+      " 220  RedTeamTrueDamageDoneToChampions       int64  \n",
+      " 221  BlueTeamWards                          int64  \n",
+      " 222  RedTeamWards                           int64  \n",
+      " 223  BlueTeamAssists                        int64  \n",
+      " 224  RedTeamAssists                         int64  \n",
+      " 225  BlueTeamXp                             int64  \n",
+      " 226  RedTeamXp                              int64  \n",
+      " 227  BlueTeamTotalGoldDifference            int64  \n",
+      " 228  RedTeamTotalGoldDifference             int64  \n",
+      " 229  BlueTeamMVPKills                       float64\n",
+      " 230  RedTeamMVPKills                        float64\n",
+      "dtypes: float64(188), int64(38), object(5)\n",
+      "memory usage: 3.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_df.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "309bb516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300100.0    13\n",
+       "600193.0    11\n",
+       "300081.0    11\n",
+       "300103.0    11\n",
+       "300075.0    11\n",
+       "            ..\n",
+       "900222.0     1\n",
+       "900203.0     1\n",
+       "300069.0     1\n",
+       "900189.0     1\n",
+       "600224.0     1\n",
+       "Name: timestamp, Length: 548, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_df.timestamp.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "80c317a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_df['rounded_time'] = round((time_df.timestamp / 60000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "14f40d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0    423\n",
+       "20.0    423\n",
+       "10.0    423\n",
+       "5.0     423\n",
+       "Name: rounded_time, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_df['rounded_time'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "69662b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_df.to_csv('time_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "770c3b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4110090244    4\n",
+       "4107763000    4\n",
+       "4109741466    4\n",
+       "4108559768    4\n",
+       "4109763990    4\n",
+       "             ..\n",
+       "4109718200    4\n",
+       "4108153527    4\n",
+       "4107455154    4\n",
+       "4109189806    4\n",
+       "4109694975    4\n",
+       "Name: gameId, Length: 423, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_df.gameId.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d71f0d7",
    "metadata": {},
    "outputs": [],
    "source": []
