Testing funcion fixes

--- a/smith/model_new_data.ipynb
+++ b/smith/model_new_data.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "19401444",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "[4863 rows x 196 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "bee2657f",
    "metadata": {},
    "outputs": [
@@ -653,17 +653,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "e6765c67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((3890, 229), (973, 229))"
+       "((3890, 241), (973, 241))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,30 +676,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "0f9e74e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop all columns that are categorical. They are not useful\n",
+    "cols_to_drop = list(train.select_dtypes('object').columns)\n",
+    "cols_to_drop.append('blueteam_win')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "affa0df8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['gameMode', 'gameName', 'gameType', 'gameVersion', 'matchId'], dtype='object')"
+       "['gameMode', 'gameName', 'gameType', 'gameVersion', 'matchId', 'blueteam_win']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Drop all columns that are categorical. They are not useful\n",
-    "cols_to_drop = train.select_dtypes('object').columns\n",
     "cols_to_drop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "23dbd16d",
    "metadata": {},
    "outputs": [],
@@ -710,17 +720,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "7ef9b79a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((3890, 224), (973, 224))"
+       "((3890, 235), (973, 235))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "3bdd497e",
    "metadata": {},
    "outputs": [],
@@ -743,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "a3314590",
    "metadata": {},
    "outputs": [],
@@ -757,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "b9b8286d",
    "metadata": {},
    "outputs": [
@@ -765,9 +775,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Cross-Validated Accuracy:  0.6344\n",
-      "Max Depth:  13\n",
-      "Min Samples Per Leaf:  14\n"
+      "Mean Cross-Validated Accuracy:  0.6362\n",
+      "Max Depth:  7\n",
+      "Min Samples Per Leaf:  15\n"
      ]
     }
    ],
@@ -778,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "1567cbe1",
    "metadata": {},
    "outputs": [
@@ -809,63 +819,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RedTeamTotalGoldDifference</th>\n",
-       "      <td>0.043678</td>\n",
+       "      <td>0.053720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BlueTeamTotalGoldDifference</th>\n",
-       "      <td>0.042757</td>\n",
+       "      <td>0.047714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamXpDifference</th>\n",
+       "      <td>0.044521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTotalDmgDifference</th>\n",
+       "      <td>0.034544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamLevelDifference</th>\n",
+       "      <td>0.023664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BlueTeamTotalMinionsMonstersDifference</th>\n",
+       "      <td>0.023235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RedTeamXp</th>\n",
-       "      <td>0.022739</td>\n",
+       "      <td>0.023094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RedTeamTotalGold</th>\n",
-       "      <td>0.021644</td>\n",
+       "      <td>0.022331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gameDuration</th>\n",
-       "      <td>0.019262</td>\n",
+       "      <td>0.020105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BlueTeamXp</th>\n",
-       "      <td>0.018272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BlueTeamTotalGold</th>\n",
-       "      <td>0.017611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RedTeamTotalDamageDoneToChampions</th>\n",
-       "      <td>0.016600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>totalGold_9</th>\n",
-       "      <td>0.011461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RedTeamKills</th>\n",
-       "      <td>0.011025</td>\n",
+       "      <th>BlueTeamDeathsDifference</th>\n",
+       "      <td>0.017994</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          0\n",
-       "RedTeamTotalGoldDifference         0.043678\n",
-       "BlueTeamTotalGoldDifference        0.042757\n",
-       "RedTeamXp                          0.022739\n",
-       "RedTeamTotalGold                   0.021644\n",
-       "gameDuration                       0.019262\n",
-       "BlueTeamXp                         0.018272\n",
-       "BlueTeamTotalGold                  0.017611\n",
-       "RedTeamTotalDamageDoneToChampions  0.016600\n",
-       "totalGold_9                        0.011461\n",
-       "RedTeamKills                       0.011025"
+       "                                               0\n",
+       "RedTeamTotalGoldDifference              0.053720\n",
+       "BlueTeamTotalGoldDifference             0.047714\n",
+       "BlueTeamXpDifference                    0.044521\n",
+       "BlueTeamTotalDmgDifference              0.034544\n",
+       "BlueTeamLevelDifference                 0.023664\n",
+       "BlueTeamTotalMinionsMonstersDifference  0.023235\n",
+       "RedTeamXp                               0.023094\n",
+       "RedTeamTotalGold                        0.022331\n",
+       "gameDuration                            0.020105\n",
+       "BlueTeamDeathsDifference                0.017994"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
